--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -8,11 +8,17 @@
     <LinearLayout android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:background="@drawable/gradienthorizontal">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_backwhiteicon"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp">
+            <ImageView
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:src="@drawable/ic_backwhiteicon"
+                />
 
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
