--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorBlue">#2482CA</color>
-    <color name="colorPurple">#7765B7</color>
+    <color name="colorPurple">#2482CA</color>
     <color name="colorWhite">#FFFFFF</color>
 </resources>
