--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,57 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FragmentHome">
 
     <!-- TODO: Update blank fragment layout -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <ImageView
-                app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="match_parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/layoutBGImg1"/>
+                android:layout_height="895px"
+                android:src="@drawable/layoutBGImg1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <LinearLayout
-                android:padding="10dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/homeLLSearch"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
                 <android.support.v7.widget.CardView
                     android:layout_width="0dp"
-                    app:cardCornerRadius="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="10dp"
                     android:layout_weight="5"
-                    android:layout_height="wrap_content">
+                    app:cardCornerRadius="10dp">
+
                     <LinearLayout
-                        android:layout_margin="5dp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp">
+
                         <ImageView
-                            android:layout_gravity="center"
                             android:layout_width="30dp"
-                            android:src="@drawable/ic_search_black_24dp"
-                            android:layout_height="30dp" />
+                            android:layout_height="30dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_search_black_24dp" />
+
                         <EditText
-                            android:background="@null"
-                            android:layout_marginLeft="5dp"
-                            android:textColorHint="#E0E0E0"
+                            android:id="@+id/homeSearch"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="What are you looking for?"/>
+                            android:layout_marginLeft="5dp"
+                            android:background="@null"
+                            android:hint="What are you looking for?"
+                            android:textColorHint="#E0E0E0" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
+
                 <ImageView
+                    android:id="@+id/homeBtTranslate"
                     android:layout_width="0dp"
+                    android:layout_height="60dp"
                     android:layout_weight="1"
-                    android:layout_height="wrap_content" />
+                    android:src="@drawable/translateButtonIcon" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/homeLLSearch">
+
+                <android.support.v7.widget.RecyclerView
+                    android:layout_width="wrap_content"
+                    android:id="@+id/homeRvPromo"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                </android.support.v7.widget.RecyclerView>
             </LinearLayout>
         </android.support.constraint.ConstraintLayout>
 
