--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingLeft="20dp"
-            android:text="Merchant"
+            android:text="Pay"
             android:textColor="#fff"
             android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -64,11 +64,11 @@
                 android:gravity="center"
                 android:text="Your Balance"
                 android:textAlignment="center"
-                android:textColor="#000"
-                android:textSize="20dp"
+                android:textColor="#696969"
+                android:textSize="11dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="25dp" />
+                app:layout_constraintStart_toStartOf="parent" />
+            <Tec
 
 
         </android.support.constraint.ConstraintLayout>
