--- a/app/src/main/res/layout/merchant.xml
+++ b/app/src/main/res/layout/merchant.xml
@@ -44,7 +44,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="#000">
+        android:background="@drawable/productImg1">
 
         <LinearLayout
             android:layout_width="wrap_content"
