--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -121,17 +121,24 @@
                     <android.support.v7.widget.CardView
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        android:background="@drawable/gradienthorizontal"
+                        app:cardCornerRadius="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_width="100dp"
                         android:layout_height="wrap_content">
-                        <TextView
-                            android:textAlignment="center"
-                            android:layout_gravity="center"
-                            android:layout_width="wrap_content"
-                            android:layout_margin="10dp"
-                            android:layout_height="wrap_content"
-                            android:text="TOP UP"/>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:scaleType="fitXY"
+                            android:background="@drawable/bgcolor"
+                            android:layout_height="match_parent">
+                            <TextView
+                                android:textAlignment="center"
+                                android:gravity="center"
+                                android:textColor="@color/colorWhite"
+                                android:layout_width="match_parent"
+                                android:layout_margin="10dp"
+                                android:layout_height="wrap_content"
+                                android:text="TOP UP"/>
+                        </LinearLayout>
                     </android.support.v7.widget.CardView>
                 </android.support.constraint.ConstraintLayout>
             </android.support.v7.widget.CardView>
