Added For You, Recommendations, Nearest

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorWhite</item>
         <item name="colorPrimaryDark">@color/colorBlue</item>
         <item name="colorAccent">@color/colorPurple</item>
+        <item name="android:fontFamily">@font/hind</item>
     </style>
 
 </resources>
