--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LogIn">
+    tools:context=".LoginActivity">
     <RelativeLayout android:id="@+id/rlProgress" android:layout_width="match_parent" android:layout_height="match_parent" android:visibility="gone">
         <android.support.v7.widget.CardView android:layout_width="wrap_content"
             android:id="@+id/cardProgressBarSignIn"
