--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".SignInActivity">
     <RelativeLayout android:id="@+id/rlProgress" android:layout_width="match_parent" android:layout_height="match_parent" android:visibility="gone">
         <android.support.v7.widget.CardView android:layout_width="wrap_content"
             android:id="@+id/cardProgressBarSignIn"
@@ -115,6 +115,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvDont"
+            android:visibility="gone"
             android:layout_marginBottom="40px"
             android:layout_marginLeft="40px"
             android:id="@+id/tvForgotPassword"
