--- a/app/src/main/res/layout/foryou_content.xml
+++ b/app/src/main/res/layout/foryou_content.xml
@@ -49,7 +49,7 @@
                     android:layout_height="14dp"
                     android:src="@drawable/ic_locationicon"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="" Of="@id/textkm"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
