--- a/app/src/main/res/layout/recommendationsnearby_content.xml
+++ b/app/src/main/res/layout/recommendationsnearby_content.xml
@@ -50,7 +50,7 @@
                     android:layout_height="14dp"
                     android:src="@drawable/ic_locationicon"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf=""
+                    app:layout_constraintRight_toLeftOf="@id/textkm"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
@@ -63,7 +63,6 @@
                     android:textSize="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                     app:layout_constraintTop_toTopOf="parent" />
 
             </android.support.constraint.ConstraintLayout>
