--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".PayActivity"
     android:orientation="vertical">
 
     <android.support.constraint.ConstraintLayout
@@ -17,7 +18,7 @@
         >
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/backPay"
             android:layout_width="34dp"
             android:layout_height="34dp"
             android:layout_marginStart="16dp"
@@ -38,7 +39,7 @@
             android:textColor="#fff"
             android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/backPay"
             app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
