--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -175,17 +175,10 @@
                         android:layout_marginRight="10dp"
                         android:orientation="vertical">
 
-                        <android.support.v7.widget.CardView
+                        <ImageView
                             android:layout_width="100dp"
                             android:layout_height="50dp"
-                            app:cardCornerRadius="10dp">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:scaleType="fitXY"
-                                android:src="@drawable/allcategoriesimg" />
-                        </android.support.v7.widget.CardView>
+                            android:src="@drawable/allcategoriesimg" />
 
                         <TextView
                             android:layout_width="match_parent"
@@ -203,17 +196,10 @@
                         android:layout_marginRight="10dp"
                         android:orientation="vertical">
 
-                        <android.support.v7.widget.CardView
+                        <ImageView
                             android:layout_width="100dp"
                             android:layout_height="50dp"
-                            app:cardCornerRadius="10dp">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:scaleType="fitXY"
-                                android:src="@drawable/foodimg" />
-                        </android.support.v7.widget.CardView>
+                            android:src="@drawable/foodimg" />
 
                         <TextView
                             android:layout_width="match_parent"
@@ -231,17 +217,10 @@
                         android:layout_marginRight="10dp"
                         android:orientation="vertical">
 
-                        <android.support.v7.widget.CardView
+                        <ImageView
                             android:layout_width="100dp"
                             android:layout_height="50dp"
-                            app:cardCornerRadius="10dp">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:scaleType="fitXY"
-                                android:src="@drawable/fashionimg" />
-                        </android.support.v7.widget.CardView>
+                            android:src="@drawable/fashionimg" />
 
                         <TextView
                             android:layout_width="match_parent"
@@ -259,18 +238,10 @@
                         android:layout_marginRight="10dp"
                         android:orientation="vertical">
 
-                        <android.support.v7.widget.CardView
+                        <ImageView
                             android:layout_width="100dp"
                             android:layout_height="50dp"
-                            app:cardCornerRadius="10dp">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:scaleType="fitXY"
-                                android:src="@drawable/craftimg" />
-                        </android.support.v7.widget.CardView>
-
+                            android:src="@drawable/craftimg" />
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -287,17 +258,10 @@
                         android:layout_marginRight="10dp"
                         android:orientation="vertical">
 
-                        <android.support.v7.widget.CardView
+                        <ImageView
                             android:layout_width="100dp"
                             android:layout_height="50dp"
-                            app:cardCornerRadius="10dp">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:scaleType="fitXY"
-                                android:src="@drawable/beautyimg" />
-                        </android.support.v7.widget.CardView>
+                            android:src="@drawable/beautyimg" />
 
                         <TextView
                             android:layout_width="match_parent"
@@ -311,19 +275,13 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="10dp"
+                        android:layout_marginRight="30dp"
                         android:orientation="vertical">
 
-                        <android.support.v7.widget.CardView
+                        <ImageView
                             android:layout_width="100dp"
                             android:layout_height="50dp"
-                            app:cardCornerRadius="10dp">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:src="@drawable/tekstilimg" />
-                        </android.support.v7.widget.CardView>
+                            android:src="@drawable/tekstilimg" />
 
                         <TextView
                             android:layout_width="match_parent"
@@ -385,6 +343,7 @@
 
                 </android.support.v7.widget.RecyclerView>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -405,18 +364,18 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
                     <android.support.v7.widget.RecyclerView
-                        android:padding="10dp"
                         android:layout_width="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:layout_height="wrap_content">
-                    </android.support.v7.widget.RecyclerView>
+                        android:padding="10dp"></android.support.v7.widget.RecyclerView>
+
                     <android.support.v7.widget.RecyclerView
-                        android:padding="10dp"
                         android:layout_width="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:layout_height="wrap_content">
-                    </android.support.v7.widget.RecyclerView>
+                        android:padding="10dp"></android.support.v7.widget.RecyclerView>
                 </LinearLayout>
             </LinearLayout>
         </android.support.constraint.ConstraintLayout>
