--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -223,7 +223,9 @@
             </android.support.v7.widget.RecyclerView>
 
             <android.support.v7.widget.CardView
+                android:id="@+id/btLogOut"
                 android:layout_width="match_parent"
+                android:padding="10dp"
                 android:layout_height="37dp"
                 app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                 android:layout_marginTop="20dp">
